--- a/index.html
+++ b/index.html
@@ -108,8 +108,29 @@ progress {
   margin-top: 6px;
   font-size: 13px;
 }
-
+#control {
+  margin: 20px 0;
+  text-align: center;
 }
+
+#control button {
+  width: 70px;
+  height: 70px;
+  margin: 10px;
+  font-size: 30px;
+  border-radius: 15px;
+  border: none;
+  background: #1db954;
+  color: black;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+control button:active {
+  transform: scale(0.95);
+  background: #17a84a;
+}
+
 </style>
 
 </head>
