--- a/index.html
+++ b/index.html
@@ -161,6 +161,14 @@ control button:active {
   <ul id="files"></ul>
 </div>
 
+<div id="control">
+  <button onclick="sendDir('UP')">⬆️</button>
+  <div>
+    <button onclick="sendDir('LEFT')">⬅️</button>
+    <button onclick="sendDir('DOWN')">⬇️</button>
+    <button onclick="sendDir('RIGHT')">➡️</button>
+  </div>
+</div>
 </body>
 
   
